--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" tyle="text/css" href="/src/App.css"/>
+    <link rel="stylesheet" tyle="text/css" href="/src/App.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Navigator World</title>
   </head>
   <body>
     <div id="root"></div>
